# CosmicBLUP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  INPUT_FORMATS.md  MODEL_SUPPORT.md  OUTPUT_FORMATS.md  RELEASE.md  RELEASE_NOTES.md  USER_GUIDE_CN.md  USER_GUIDE_EN.md  VALIDATION.md
examples/pblup_minimal/: README.md  vars.txt
examples/repeatability_pblup/: README.md  repeatability_demo.ped.txt  repeatability_demo.phe.txt
scripts/: package_linux.sh  package_macos.sh  package_windows.ps1
src/app/: blup_app.cpp  blup_app.h  cli.cpp  main.cpp  runtime.cpp
src/config/: config.h  version.h.in
src/core/: a_matrix.cpp  a_matrix.h  adaptive_trace_estimator.cpp  adaptive_trace_estimator.h  bgen_reader.cpp  bgen_reader.h  dense_solver.cpp  dense_solver.h  design.cpp  design.h  eigen_vce.cpp  eigen_vce.h  grm_builder.cpp  grm_builder.h  implicit_mme.h  logger.h  matrix_adapter.h  matrix_free_pcg.h  matrix_inversion.cpp  matrix_inversion.h  matrix_io.cpp  matrix_io.h  mmap_matrix.h  mme_builder.cpp  mme_builder.h  pcg_solver.h  pgen_reader.cpp  pgen_reader.h  plink_reader.cpp  plink_reader.h  qc_engine.cpp  qc_engine.h  qc_utils.cpp  qc_utils.h  rng.h  slq_estimator.cpp  slq_estimator.h  stcg_vce.cpp  stcg_vce.h  string_utils.h  (+6 more)
src/io/: phenotype_loader.cpp  phenotype_loader.h  relationship_builder.cpp  relationship_builder.h
src/model/: model_pipeline.cpp  model_pipeline.h  random_regression.cpp  random_regression.h
src/solve/: mixed_model_solver.cpp  mixed_model_solver.h  result_writer.cpp
src/tasks/: auxiliary_tasks.cpp  auxiliary_tasks.h
src/variance/: variance_estimator.cpp  variance_estimator.h
tests/: run_case.py
tests/fixtures/pblup_minimal/: README.md  pedigree.txt  pheno.txt  vars.txt
tests/fixtures/toy_plink/: README.md  toy.bed  toy.bim  toy.fam
